--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,9 @@
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 75em; // 1200px
+$bp-large: 62.5em; // 1000px
+$bp-medium: 50em; // 800px
+$bp-small: 37.5em; // 600px
+
 *,
 *::after,
 *::before {
@@ -10,6 +16,10 @@ html {
   //defines what 1 rem represents
   font-size: 62.5%;
   scroll-behavior: smooth;
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -19,10 +29,6 @@ body {
 .container {
   display: grid;
   grid-template-rows: 100vh repeat(5, min-content);
-  //   grid-template-columns:
-  //     [sidebar-start] 6rem [sidebar-end full-start] minmax(6rem, 1fr)
-  //     [content-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
-  //     [content-end] minmax(6rem, 1fr) [full-end];
 
   //without initial sidebar column
   grid-template-columns:
