--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ possible colour variants;
 html {
   font-size: 62.5%;
   scroll-behavior: smooth; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   box-sizing: border-box; }
@@ -230,12 +233,22 @@ a {
     display: flex;
     align-items: flex-start;
     margin-bottom: 2rem; }
+    @media only screen and (max-width: 62.5em) {
+      .about .about-container {
+        align-items: center; } }
+    @media only screen and (max-width: 50em) {
+      .about .about-container {
+        flex-direction: column;
+        align-items: center; } }
     .about .about-container--text {
       width: 50vw; }
       .about .about-container--text > p {
         width: 100%;
         font-size: 1.8rem;
         margin-top: 2rem; }
+      @media only screen and (max-width: 50em) {
+        .about .about-container--text {
+          width: 100%; } }
     .about .about-container--pictures {
       margin-left: 2rem;
       background-color: transparent;
@@ -244,32 +257,64 @@ a {
       display: flex;
       align-items: flex-start;
       transition: all 0.4s; }
+      @media only screen and (max-width: 62.5em) {
+        .about .about-container--pictures {
+          margin-top: -4rem; } }
+      @media only screen and (max-width: 50em) {
+        .about .about-container--pictures {
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          margin-top: 1.5rem;
+          margin-left: 0; } }
       .about .about-container--pictures > * {
         border: 3px solid #d8e9f3;
         border-radius: 2px;
         background-position: 50% 50%;
         background-repeat: no-repeat;
         background-size: cover;
-        width: 20rem;
-        height: 20rem; }
+        width: 18rem;
+        height: 18rem; }
+        @media only screen and (max-width: 62.5em) {
+          .about .about-container--pictures > * {
+            width: 16rem;
+            height: 16rem; } }
         .about .about-container--pictures > *:hover {
           z-index: 3000;
           transform: scale(1.1); }
       .about .about-container--pictures-picture-1 {
         background-image: url(/resources/snowboard.jpg);
-        position: absolute;
-        margin-top: -2rem; }
+        position: absolute; }
+        @media only screen and (max-width: 50em) {
+          .about .about-container--pictures-picture-1 {
+            position: relative; } }
       .about .about-container--pictures-picture-2 {
         background-image: url(/resources/ball.jpg);
         position: relative;
         top: 2rem;
         left: 16rem; }
+        @media only screen and (max-width: 62.5em) {
+          .about .about-container--pictures-picture-2 {
+            left: 12rem; } }
+        @media only screen and (max-width: 50em) {
+          .about .about-container--pictures-picture-2 {
+            left: 0;
+            top: 0;
+            margin-left: 4rem;
+            margin-right: 4rem; } }
       .about .about-container--pictures-picture-3 {
         background-image: url(/resources/code.jpg);
         background-position: right;
         position: relative;
-        top: 6rem;
+        top: 4rem;
         left: 12rem; }
+        @media only screen and (max-width: 62.5em) {
+          .about .about-container--pictures-picture-3 {
+            left: 6rem; } }
+        @media only screen and (max-width: 50em) {
+          .about .about-container--pictures-picture-3 {
+            left: 0;
+            top: 0; } }
 
 .skills {
   background-color: rgba(216, 233, 243, 0.6);
@@ -291,6 +336,9 @@ a {
     background-color: none;
     border-radius: 1rem;
     width: 65vw; }
+    @media only screen and (max-width: 50em) {
+      .skills__container {
+        padding: 3rem 0; } }
     .skills__container:not(:last-child) {
       margin-bottom: 2rem; }
   .skills__flex {
@@ -313,6 +361,9 @@ a {
       font-size: 1.5rem;
       font-weight: 300;
       color: #292a2d; }
+      @media only screen and (max-width: 75em) {
+        .skills__details--text {
+          font-size: 1.7rem; } }
 
 .projects {
   background-color: whitesmoke;
@@ -351,19 +402,22 @@ a {
       background-color: #292a2d;
       border: 1px solid black;
       height: 35rem;
-      width: 45%;
+      width: 50%;
       padding: 2rem 4rem;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      justify-content: center;
       margin-right: 0.75rem;
       box-shadow: -10px -10px 0 #dcccf0; }
-      .projects-container__info > * {
-        margin-top: 2rem; }
+      @media only screen and (max-width: 62.5em) {
+        .projects-container__info {
+          padding: 1rem 2rem; } }
       .projects-container__info .heading--3 {
         box-shadow: inset 0 -1.2rem 0 rgba(216, 233, 243, 0.2);
         font-size: 2.6rem;
-        color: #e6e6f0; }
+        color: #e6e6f0;
+        margin-bottom: 1rem; }
       .projects-container__info .heading--5 {
         color: #e6e6f0; }
       .projects-container__info--skills {
@@ -379,6 +433,9 @@ a {
           border-radius: 2px; }
           .projects-container__info--skills-item:not(:last-child) {
             margin-right: 2rem; }
+            @media only screen and (max-width: 62.5em) {
+              .projects-container__info--skills-item:not(:last-child) {
+                margin-right: 1rem; } }
       .projects-container__info:nth-child(2n) {
         box-shadow: 10px -10px 0 #c8e0ee;
         margin-left: 0.75rem; }
@@ -386,7 +443,7 @@ a {
         display: flex;
         width: 100%;
         justify-content: center;
-        margin-top: 3.5rem; }
+        margin-top: 2rem; }
         .projects-container__info--links-link-btn {
           background-color: #e6e6f0;
           border: none;
@@ -394,7 +451,7 @@ a {
           text-transform: uppercase;
           font-weight: 400;
           color: #292a2d;
-          padding: 0.5rem 1.5rem;
+          padding: 0.5rem 1rem;
           list-style: none;
           cursor: pointer;
           box-shadow: 5px 5px 0 #cfb8eb;
@@ -402,6 +459,9 @@ a {
           top: 0;
           left: 0;
           transition: all 0.4s; }
+          @media only screen and (max-width: 62.5em) {
+            .projects-container__info--links-link-btn {
+              margin: 0 1rem; } }
           .projects-container__info--links-link-btn:hover {
             transform: translate(5px, 5px);
             background-color: #cfb8eb;
@@ -442,10 +502,11 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%; }
+    width: 100%; }
   .contact__text {
-    align-items: center;
-    margin-left: 2rem; }
+    align-items: flex-start;
+    margin-left: 2rem;
+    margin-right: 0; }
     .contact__text .heading--2 {
       position: relative;
       margin-right: 16rem;
@@ -463,7 +524,7 @@ a {
         z-index: -1; }
     .contact__text > p {
       margin-top: 2rem;
-      width: 55%;
+      width: 75%;
       font-size: 1.7rem; }
     .contact__text span {
       box-shadow: inset 0 -10px 0 white;
