--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -55,20 +55,22 @@
       background-color: $color-almost-black;
       border: 1px solid black;
       height: 35rem;
-      width: 45%;
+      width: 50%;
       padding: 2rem 4rem;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      justify-content: center;
 
-      & > * {
-        margin-top: 2rem;
+      @media only screen and (max-width: $bp-large) {
+        padding: 1rem 2rem;
       }
 
       & .heading--3 {
         box-shadow: inset 0 -1.2rem 0 rgba(216, 233, 243, 0.2);
         font-size: 2.6rem;
         color: lighten(#d6d7e6, 5%);
+        margin-bottom: 1rem;
       }
 
       & .heading--5 {
@@ -90,6 +92,10 @@
 
           &:not(:last-child) {
             margin-right: 2rem;
+
+            @media only screen and (max-width: $bp-large) {
+              margin-right: 1rem;
+            }
           }
         }
       }
@@ -105,7 +111,7 @@
         display: flex;
         width: 100%;
         justify-content: center;
-        margin-top: 3.5rem;
+        margin-top: 2rem;
 
         &-link-btn {
           background-color: lighten(#d6d7e6, 5%);
@@ -114,7 +120,7 @@
           text-transform: uppercase;
           font-weight: 400;
           color: $color-almost-black;
-          padding: 0.5rem 1.5rem;
+          padding: 0.5rem 1rem;
           list-style: none;
           cursor: pointer;
           box-shadow: 5px 5px 0 lighten(#8b55ce, 25%);
@@ -122,6 +128,10 @@
           top: 0;
           left: 0;
           transition: all 0.4s;
+
+          @media only screen and (max-width: $bp-large) {
+            margin: 0 1rem;
+          }
 
           &:hover {
             transform: translate(5px, 5px);
