--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -15,6 +15,10 @@
     align-items: center;
     margin-top: 12rem;
 
+    @media only screen and (max-width: $bp-large) {
+      flex-direction: column;
+    }
+
     &--project-1 {
       margin-top: 5rem;
     }
@@ -24,6 +28,17 @@
       width: 60rem;
       height: 50rem;
       border: 1px solid $color-almost-black;
+
+      &:nth-child(2n) {
+        @media only screen and (max-width: $bp-large) {
+          order: -1;
+        }
+      }
+
+      @media only screen and (max-width: $bp-large) {
+        margin-bottom: 2rem;
+        // width: 95vw;
+      }
 
       &-1,
       &-2,
@@ -66,15 +81,40 @@
         padding: 1rem 2rem;
       }
 
+      @media only screen and (max-width: $bp-large) {
+        width: 70rem;
+        background-color: transparent;
+        border: none;
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+        width: 90vw;
+        background-color: transparent;
+        border: none;
+      }
+
       & .heading--3 {
         box-shadow: inset 0 -1.2rem 0 rgba(216, 233, 243, 0.2);
         font-size: 2.6rem;
         color: lighten(#d6d7e6, 5%);
         margin-bottom: 1rem;
+        font-weight: 500;
+        letter-spacing: 1px;
+
+        @media only screen and (max-width: $bp-large) {
+          font-size: 3rem;
+          color: $color-almost-black;
+          color: lighten($color-default-text, 6%);
+          box-shadow: inset 0 -1.6rem 0 lighten(#d6d7e6, 4%);
+        }
       }
 
       & .heading--5 {
         color: lighten(#d6d7e6, 5%);
+        @media only screen and (max-width: $bp-large) {
+          font-size: 2rem;
+          color: $color-almost-black;
+        }
       }
 
       &--skills {
@@ -88,12 +128,22 @@
           padding: 0.5rem 1rem;
           color: $color-almost-black;
           background-color: lighten(#d6d7e6, 5%);
-          border-radius: 2px;
+
+          @media only screen and (max-width: $bp-large) {
+            font-size: 2rem;
+            padding: 1rem;
+            background-color: lighten(#d6d7e6, 4%);
+            color: $color-almost-black;
+          }
 
           &:not(:last-child) {
             margin-right: 2rem;
 
             @media only screen and (max-width: $bp-large) {
+              margin-right: 3rem;
+            }
+
+            @media only screen and (max-width: $bp-small) {
               margin-right: 1rem;
             }
           }
@@ -106,6 +156,16 @@
       }
       margin-right: 0.75rem;
       box-shadow: -10px -10px 0 lighten(#8b55ce, 30%);
+
+      &:nth-child(2n) {
+        @media only screen and (max-width: $bp-large) {
+          box-shadow: 8px 8px 0 darken(rgb(216, 233, 243), 4%);
+        }
+      }
+
+      @media only screen and (max-width: $bp-large) {
+        box-shadow: 8px 8px 0 lighten(#8b55ce, 30%);
+      }
 
       &--links {
         display: flex;
@@ -133,10 +193,18 @@
             margin: 0 1rem;
           }
 
+          @media only screen and (max-width: $bp-large) {
+            margin: 0 2rem;
+            padding: 1rem 1.5rem;
+            font-size: 2rem;
+            margin-top: 1rem;
+            box-shadow: 5px 5px 0 lighten(#8b55ce, 30%);
+          }
+
           &:hover {
             transform: translate(5px, 5px);
-            background-color: lighten(#8b55ce, 25%);
-            box-shadow: 0px 0px 0 lighten(#8b55ce, 25%);
+            background-color: lighten(#8b55ce, 30%);
+            box-shadow: 0px 0px 0 lighten(#8b55ce, 30%);
           }
 
           &:active {
@@ -151,10 +219,22 @@
             transform: translate(-5px, 5px);
             box-shadow: 0px 0px 0 darken(rgb(216, 233, 243), 6%);
             background-color: darken(rgb(216, 233, 243), 4%);
+
+            @media only screen and (max-width: $bp-large) {
+              transform: translate(5px, 5px);
+              background-color: rgb(216, 233, 243);
+            }
           }
 
           &:active {
             transform: translate(-5px, 8px);
+            @media only screen and (max-width: $bp-large) {
+              transform: translate(5px, 8px);
+            }
+          }
+
+          @media only screen and (max-width: $bp-large) {
+            box-shadow: 5px 5px 0 darken(rgb(216, 233, 243), 2%);
           }
         }
       }
@@ -170,6 +250,15 @@
         darken($color-background-2, 7%),
         darken($color-background-2, 10%)
       );
+
+      @media only screen and (max-width: $bp-largest) {
+        @include style-after-element(
+          23rem,
+          3rem,
+          darken($color-background-2, 7%),
+          darken($color-background-2, 10%)
+        );
+      }
     }
   }
 }
