--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -14,6 +14,11 @@
   justify-content: space-between;
   align-items: center;
 
+  @media only screen and (max-width: $bp-large) {
+    height: 0vh;
+    width: 0;
+  }
+
   &__icon {
     width: 100%;
     height: 2.75rem;
@@ -60,7 +65,7 @@
     display: flex;
     flex-direction: column;
     transition: all 0.3s;
-    transform: translateY(-3rem);
+    transform: translateY(-4rem);
 
     &--icon:hover {
       fill: black;
@@ -84,6 +89,10 @@
       font-size: 1.4rem;
 
       opacity: 0;
+
+      @media only screen and (max-width: $bp-large) {
+        font-size: 0;
+      }
     }
 
     // icons disappear, text appears on hover
