--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -14,8 +14,13 @@ body {
 
 .heading--2 {
   font-size: 3.5rem;
-  font-weight: 400;
-  color: $color-default-text;
+  font-weight: 500;
+  letter-spacing: 0px;
+  color: lighten($color-default-text, 6%);
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 4rem;
+  }
 }
 
 .heading--3 {
@@ -36,13 +41,4 @@ body {
   font-size: 1.6rem;
   font-weight: 300;
   color: $color-default-text;
-}
-
-// heading text
-.intro > span {
-  color: lighten($color-default-text, 7%);
-  font-size: 3rem;
-  font-weight: 300;
-  text-align: center;
-  text-shadow: 2px 2px 8px gray;
 }
