--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,144 @@ body {
 .u-margin-bottom-large {
   margin-bottom: 10rem; }
 
+.navigation {
+  grid-row: -1 / -1;
+  opacity: 0;
+  pointer-events: none; }
+  @media only screen and (max-width: 62.5em) {
+    .navigation {
+      opacity: 1;
+      pointer-events: auto; } }
+  .navigation__checkbox {
+    position: fixed; }
+  .navigation__button {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    background-color: whitesmoke;
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    z-index: 29500;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.2s; }
+    .navigation__button:hover {
+      background-color: #e4f0f7; }
+  .navigation__nav {
+    background-color: transparent;
+    position: fixed;
+    top: 10rem;
+    right: 1.5rem;
+    z-index: 29000;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    width: 30rem;
+    transition: opacity 0.7s; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__nav {
+        width: 100%;
+        top: 0;
+        right: 0; } }
+    .navigation__nav::before {
+      content: "";
+      position: absolute;
+      top: -1.5rem;
+      right: 2rem;
+      border-left: 1.5rem solid transparent;
+      border-right: 1.5rem solid transparent;
+      border-bottom: 1.5rem solid whitesmoke; }
+  .navigation__list {
+    list-style: none; }
+  .navigation__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.4rem;
+    text-transform: lowercase;
+    margin-bottom: 0;
+    text-align: center;
+    width: 30rem;
+    background-image: linear-gradient(90deg, whitesmoke 0%, whitesmoke 50%, #292a2d 50%);
+    background-size: 200%;
+    transition: background-position 0.4s; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__item {
+        width: 100%;
+        background-image: none;
+        background-color: whitesmoke; } }
+    .navigation__item:first-child {
+      border-top-left-radius: 3px;
+      border-top-right-radius: 3px; }
+    .navigation__item:last-child {
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px; }
+    .navigation__item:not(:last-child) {
+      border-bottom: 1px solid gainsboro; }
+    .navigation__item:hover, .navigation__item:active {
+      background-position: 100%; }
+      @media only screen and (max-width: 37.5em) {
+        .navigation__item:hover, .navigation__item:active {
+          background-position: 0%; } }
+      @media only screen and (max-width: 37.5em) {
+        .navigation__item:hover:active, .navigation__item:active:active {
+          background-color: #292a2d; } }
+    .navigation__item a {
+      color: #292a2d;
+      width: 100%;
+      padding: 2.6rem;
+      transition: color 0.6s 0.2s; }
+      @media only screen and (max-width: 37.5em) {
+        .navigation__item a {
+          transition: none; } }
+      .navigation__item a:hover, .navigation__item a:active {
+        color: whitesmoke; }
+        @media only screen and (max-width: 37.5em) {
+          .navigation__item a:hover, .navigation__item a:active {
+            color: #292a2d; } }
+      @media only screen and (max-width: 37.5em) {
+        .navigation__item a:active {
+          color: whitesmoke; } }
+  .navigation__checkbox:checked ~ .navigation__nav {
+    opacity: 1;
+    pointer-events: auto;
+    width: 30rem; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__checkbox:checked ~ .navigation__nav {
+        width: 100%; } }
+  .navigation__icon {
+    position: relative;
+    margin-top: 2.8rem; }
+    .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+      width: 3rem;
+      height: 4px;
+      background-color: rgba(56, 57, 61, 0.85);
+      display: inline-block;
+      border-radius: 2px; }
+    .navigation__icon::before, .navigation__icon::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.4s; }
+    .navigation__icon::before {
+      top: -1rem; }
+    .navigation__icon::after {
+      top: 0.95rem; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon {
+    background-color: transparent; }
+  @media only screen and (max-width: 37.5em) {
+    .navigation__checkbox:checked + .navigation__button {
+      top: 1rem;
+      background-color: transparent;
+      box-shadow: none; } }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+    top: 0;
+    transform: rotate(-135deg); }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+    top: 0;
+    transform: rotate(135deg); }
+
 .sidebar {
   background-color: transparent;
   padding: 1.5rem 0;
@@ -188,7 +326,7 @@ a {
     justify-content: center;
     align-items: center;
     position: absolute; }
-    @media only screen and (max-width: 50em) {
+    @media only screen and (max-width: 62.5em) {
       .header__icon-container {
         width: 0;
         height: 0;
