--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -43,7 +43,7 @@
     align-items: center;
     position: absolute;
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: $bp-large) {
       width: 0;
       height: 0;
       opacity: 0;
